Memory leaks with protocol_copyMethodDescriptionList()

The struct returned by protocol_copyMethodDescriptionList() should be
freed after being used.

Bug introduced with crrev.com/2785153002

Bug: 751066
Change-Id: I869ddfb4e6e3d9a489fa756ed48074a3f63175d8
Reviewed-on: https://chromium-review.googlesource.com/595739
Reviewed-by: Louis Romero <lpromero@chromium.org>
Commit-Queue: Jérôme Lebel <jlebel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490950}