ios/shared/chrome/browser/ui/commands/command_dispatcher.mm
@@ -41,6 +41,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     [self startDispatchingToTarget:target
                        forSelector:requiredInstanceMethods[i].name];
   }
+  free(requiredInstanceMethods);
 }
 
 - (void)stopDispatchingForSelector:(SEL)selector {
@@ -56,6 +57,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   for (unsigned int i = 0; i < methodCount; i++) {
     [self stopDispatchingForSelector:requiredInstanceMethods[i].name];
   }
+  free(requiredInstanceMethods);
 }
 
 // |-stopDispatchingToTarget| should be called much less often than
